--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,43 +6,55 @@ if(GLUT_FOUND AND OPENGL_FOUND)
   OPTIX_add_sample_executable(MaoPPM
     # header files
     core/global.h
-    core/reflection.h
-    core/sampler.h
+    core/DifferentialGeometry.h
+    core/Intersection.h
+    core/Light.h
+    core/Material.h
+    core/montecarlo.h
     core/ParameterVector.h
+    core/payload.h
+    core/reflection.h
     core/Renderer.h
-    core/Scene.h
     core/SceneBuilder.h
+    core/Scene.h
     core/System.h
-    renderers/PathTracingRenderer.h
+    core/utility.h
+    materials/Matte.h
+    renderers/IGPPMRenderer.h
+#    renderers/PathTracingRenderer.h
 #    renderers/PPMRenderer.h
     # source files
-    core/main.cpp
     core/global.cpp
+    core/main.cpp
     core/Renderer.cpp
     core/Scene.cpp
     core/SceneBuilder.cpp
     core/System.cpp
     parsers/pbrtParser.cc
     parsers/pbrtScanner.cc
-    renderers/PathTracingRenderer.cpp
+#    renderers/PathTracingRenderer.cpp
 #    renderers/PPMRenderer.cpp
+    renderers/IGPPMRenderer.cpp
     # CUDA source files
     core/exception.cu
-    materials/matteMaterialPathTracingPrograms.cu
+    core/ray.cu
+    materials/Matte.cu
+#    materials/matteMaterialPathTracingPrograms.cu
 #    materials/matteMaterialPPMPrograms.cu
 #    materials/plasticMaterialPathTracingPrograms.cu
 #    materials/plasticMaterialPPMPrograms.cu
-    passes/pathTracingPassPrograms.cu
+#    passes/pathTracingPassPrograms.cu
 #    passes/pixelSamplingPassPrograms.cu
 #    passes/importonShootingPassPrograms.cu
 #    passes/photonShootingPassPrograms.cu
 #    passes/gatheringPassPrograms.cu
+    renderers/IGPPMRendererPixelSamplingPass.cu
+    renderers/IGPPMRendererImportonShootingPass.cu
+    renderers/IGPPMRendererPhotonShootingPass.cu
+    renderers/IGPPMRendererFinalGatheringPass.cu
     shapes/triangleMeshShapePrograms.cu
     )
 else()
   # GLUT or OpenGL not found
   message("Disabling progressive_photon, which requires glut and opengl.")
 endif()
-
-
-
